--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como surgiu o mascote do Android</title>
-    <link rel="shortcut icon" href="pacote-projeto-d010/imagens/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
@@ -41,7 +41,7 @@
 
             <picture>
                 <source media="(max-width: 670px)" srcset="imagens/irina-blok-pq.jpg">
-                <img src="/imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid">
+                <img src="imagens/irina-blok.jpg" alt="Irina Blok, criadora do Bugdroid">
             </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o <strong>Bugdroid</strong>, o novo mascote do Android.</p>
